src/objects/Lien__c.object
<CustomObject>
    <description>Describes the outstanding debt on the field.</description>
    <fields>
        <fullName>Amortization_at_Origination_years__c</fullName>
        <label>Amortization at Origination- years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Debt_Service__c</fullName>
        <label>Annual Debt Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cross_Collateralized_Defaulted__c</fullName>
        <label>Cross Collateralized-Defaulted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cross-Collateralized</fullName>
                </value>
                <value>
                    <fullName>Cross-Defaulted</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Balance_as_of_Date__c</fullName>
        <label>Current Balance as of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Loan_Balance__c</fullName>
        <label>Current Loan Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debt_Position__c</fullName>
        <inlineHelpText>What is the position of this lender in the loss position?</inlineHelpText>
        <label>Debt Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Rate_Type__c</fullName>
        <label>Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Float</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <inlineHelpText>The interest rate on this lien.</inlineHelpText>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lender_Acknowledgement__c</fullName>
        <inlineHelpText>Date the Lender has acknowledged that a PACE lien is being place on the property.</inlineHelpText>
        <label>Lender Acknowledgement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lender_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The is the name of the lender contact.  Please fill out the email and phone</inlineHelpText>
        <label>Lender Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Liens</relationshipLabel>
        <relationshipName>Liens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lender_Type__c</fullName>
        <description>Type of Lender</description>
        <inlineHelpText>Type of Lender</inlineHelpText>
        <label>Lender Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>CMBS</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Mezzanine</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lien_LTV_As_Complete__c</fullName>
        <formula>Current_Loan_Balance__c / Opportunity__r.Appraised_Property_Value_As_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lien LTV As-Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lien_LTV_As_Is__c</fullName>
        <formula>Current_Loan_Balance__c / Opportunity__r.Property_Market_Value_Est__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lien LTV As-Is</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <label>Loan Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Months_Interest_only__c</fullName>
        <inlineHelpText>Enter # of mos, or &quot;0&quot; if N/A</inlineHelpText>
        <label>Months Interest only</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mortgage_Lender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The name of the bank or lender.</inlineHelpText>
        <label>Mortgage Lender</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Liens</relationshipLabel>
        <relationshipName>Liens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Any Notes on this lien.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Liens</relationshipLabel>
        <relationshipName>Opportunity_Liens</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Origination_Date__c</fullName>
        <inlineHelpText>This is the origination date of lien</inlineHelpText>
        <label>Origination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Servicer_File__c</fullName>
        <label>Special Servicer File #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Servicer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Special Servicer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Liens (Special Servicer)</relationshipLabel>
        <relationshipName>Liens1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Lein__c</fullName>
        <label>Type of Lien</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Bridge</fullName>
                </value>
                <value>
                    <fullName>Construction Loan</fullName>
                </value>
                <value>
                    <fullName>Mini-Perm</fullName>
                </value>
                <value>
                    <fullName>Secured Debt</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Lender__c</fullName>
        <inlineHelpText>What kind of lender is this?</inlineHelpText>
        <label>Type of Lender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>CMBS</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Mezzanine</fullName>
                </value>
                <value>
                    <fullName>Municipal Bond</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lien</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Loan_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Lien Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>